--- a/styles.css
+++ b/styles.css
@@ -414,223 +414,13 @@ footer {
 .order-form button:hover {
     background: #333;
 }
-@media (min-width: 1025px) {
-    .top-bar {
-        padding: 1rem 5%;
-    }
-    .logo-container img {
-        width: 140px;
-    }
-    .cart-icon img {
-        width: 40px;
-        padding-right: 140px;
-    }
-    .logo-container h1,
-    .menu ul li a,
-    .cart-icon img {
-        font-size: 1rem;
-        font-weight: normal;
-        color: #333;
-        text-decoration: none;
-    }
-    .menu ul {
-        list-style-type: none;
-        padding: 0;
-        margin: 0;
-        display: flex;
-    }
-    .menu ul li {
-        padding: 0 1rem;
-    }
-    nav.menu {
-        background-color: #ffffff;
-        padding: 0.5rem 0;
-    }
-    nav.menu ul {
-        list-style-type: none;
-        display: flex;
-        justify-content: center;
-        margin: 0;
-        padding: 0;
-    }
-    nav.menu ul li a {
-        font-family: 'Roboto', sans-serif;
-        color: #333;
-        text-decoration: none;
-        transition: color 0.3s;
-    }
-    nav.menu ul li a:hover {
-        color: #c7a17a;
-        background-color: #ffffff;
-    }
-    ul.submenu {
-        display: none;
-        position: absolute;
-        background-color: #ffffff;
-    }
-    ul.submenu li a {
-        padding: 0.5rem 1rem;
-        color: #333;
-    }
-    .slideshow {
-        position: relative;
-        width: 100vw;
-        height: 100vh;
-        overflow: hidden;
-    }
-    .background-image {
-        padding-top: 70px;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-    }
-    .buttons-container {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 20px;
-    }
-    .button {
-        padding: 15px 60px;
-        background-color: #000;
-        color: #fff;
-        text-align: center;
-        text-decoration: none;
-        border: none;
-        cursor: pointer;
-        transition: background-color 0.3s ease;
-        width: 100%;
-        display: block;
-        border-radius: 4px;
-        font-size: 1rem;
-    }
-    .button:hover {
-        background-color: #333;
-        color: #fff;
-    }
-    .popular-section-h2 {
-        font-size: 2em;
-        font-weight: bold;
-        padding-left: 30px;
-        text-align: left;
-        width: 100%;
-        margin-bottom: 1rem;
-    }
-    .popular-section {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        gap: 20px;
-        max-width: 1200px;
-        margin: auto;
-        padding: 10px;
-    }
-    .card {
-        width: calc(16% - 10px);
-        margin-bottom: 20px;
-        border-radius: 15px;
-        overflow: hidden;
-        text-decoration: none;
-        box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
-        transition: transform 0.3s ease, box-shadow 0.3s ease;
-        background-color: #ffffff;
-        padding: 15px;
-    }
-    .card:hover {
-        transform: translateY(-5px);
-        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-    }
-    .card img {
-        width: 100%;
-        height: auto;
-        display: block;
-    }
-    .container {
-        text-align: left;
-        text-decoration: none;
-        padding: 0 15px;
-    }
-    .container h4 {
-        font-size: 1.4em;
-        font-weight: bold;
-        text-align: left;
-        margin-bottom: 0.5rem;
-        color: #333;
-        border-bottom: 1px solid #eaeaea;
-        padding-bottom: 0.5rem;
-    }
-    .container p {
-        font-size: 0.9em;
-        text-align: left;
-        color: #666;
-        margin-top: 0.5rem;
-        text-decoration: none;
-    }
-    .card-link {
-        text-decoration: none;
-        color: inherit;
-        display: block;
-    }
-    .container h4:hover,
-    .container p:hover,
-    .card-link:hover {
-        color: #c7a17a;
-    }
-    .contact-form {
-        max-width: 500px;
-        margin: 2rem auto;
-        padding: 2rem;
-        background: #292929;
-        color: #fff;
-        border-radius: 8px;
-        box-shadow: 0 4px 6px rgba(255, 255, 255, 0.1);
-        font-family: 'Roboto', sans-serif;
-    }
-    .contact-form h2 {
-        font-size: 2rem;
-        margin-top: 0;
-        margin-bottom: 2rem;
-    }
-    .contact-form .form-group {
-        margin-bottom: 2rem;
-    }
-    .contact-form .form-group label {
-        display: block;
-        margin-bottom: .5rem;
-    }
-    .contact-form .form-group input[type="text"],
-    .contact-form .form-group input[type="email"],
-    .contact-form .form-group textarea {
-        width: 100%;
-        padding: 10px;
-        margin-top: 0.5rem;
-        border: none;
-        border-radius: 4px;
-        background-color: #333;
-        color: #fff;
-        font-family: 'Roboto', sans-serif;
-    }
-    .contact-form .form-group input[type="submit"] {
-        background-color: #000;
-        color: #fff;
-        border: none;
-        border-radius: 4px;
-        padding: 10px 20px;
-        cursor: pointer;
-        transition: background-color 0.3s ease;
-    }
-    .contact-form .form-group input[type="submit"]:hover {
-        background-color: #333;
-    }
-}
-/* Медиа-запрос для устройств с шириной экрана до 480px */
 @media (max-width: 480px) {
     .top-bar {
         padding: 0.5rem 2%;
+        position: fixed;
+        top: 0;
+        width: 100%;
+        z-index: 1000;
     }
     .logo-container img {
         width: 100px;
@@ -666,7 +456,7 @@ footer {
         width: calc(100% - 10px);
     }
     .container {
-        padding: 0 5px;
+        padding: 60px 5px 0; /* Adjust top padding to accommodate fixed top-bar */
     }
     .card-title {
         font-size: 1em;
@@ -697,6 +487,10 @@ footer {
 @media (min-width: 481px) and (max-width: 768px) {
     .top-bar {
         padding: 1rem 2%;
+        position: fixed;
+        top: 0;
+        width: 100%;
+        z-index: 1000;
     }
     .logo-container img {
         width: 120px;
@@ -732,7 +526,7 @@ footer {
         width: calc(50% - 10px);
     }
     .container {
-        padding: 0 10px;
+        padding: 60px 10px 0; /* Adjust top padding to accommodate fixed top-bar */
     }
     .card-title {
         font-size: 1.2em;
@@ -762,6 +556,10 @@ footer {
     /* Стили для экранов шириной от 769px до 1024px */
     .top-bar {
         padding: 1rem 2%;
+        position: fixed;
+        top: 0;
+        width: 100%;
+        z-index: 1000;
     }
     .logo-container img {
         width: 120px;
@@ -797,7 +595,7 @@ footer {
         width: calc(50% - 10px);
     }
     .container {
-        padding: 0 10px;
+        padding: 60px 10px 0; /* Adjust top padding to accommodate fixed top-bar */
     }
     .card-title {
         font-size: 1.2em;
