--- a/styles.css
+++ b/styles.css
@@ -416,24 +416,192 @@ footer {
 }
 @media screen and (min-width: 992px) and (max-width: 1199px) {
     .top-bar {
-  font-size: calc(100% * (992 / 1200));
- }
+    font-size: calc(100% * (992 / 1200));
+}
+
+.logo-container img {
+    font-size: calc(100% * (992 / 1200));
+}
+
+.cart-icon img {
+    font-size: calc(100% * (992 / 1200));
+}
+
+.logo-container h1,
+.menu ul li a,
+.cart-icon img {
+    font-size: calc(100% * (992 / 1200));
+}
+
+.menu ul {
+    font-size: calc(100% * (992 / 1200));
+}
+
+.menu ul li {
+    font-size: calc(100% * (992 / 1200));
+}
+
+nav.menu {
+   font-size: calc(100% * (992 / 1200));
+}
+
+nav.menu ul {
+    font-size: calc(100% * (992 / 1200));
+}
+
+nav.menu ul li a {
+    font-size: calc(100% * (992 / 1200));
+}
+
+ul.submenu {
+    font-size: calc(100% * (992 / 1200));
+}
+
+ul.submenu li a {
+    font-size: calc(100% * (992 / 1200));
+}
 }
 
 @media screen and (min-width: 768px) and (max-width: 991px) {
     .top-bar {
-  font-size: calc(100% * (768 / 1200));
- }
+    font-size: calc(100% * (768 / 1200));
+}
+
+.logo-container img {
+    font-size: calc(100% * (768 / 1200));
+}
+
+.cart-icon img {
+    font-size: calc(100% * (768 / 1200));
+}
+
+.logo-container h1,
+.menu ul li a,
+.cart-icon img {
+    font-size: calc(100% * (768 / 1200));
+}
+
+.menu ul {
+    font-size: calc(100% * (768 / 1200));
+}
+
+.menu ul li {
+    font-size: calc(100% * (768 / 1200));
+}
+
+nav.menu {
+   font-size: calc(100% * (768 / 1200));
+}
+
+nav.menu ul {
+    font-size: calc(100% * (768 / 1200));
+}
+
+nav.menu ul li a {
+    font-size: calc(100% * (768 / 1200));
+}
+
+ul.submenu {
+    font-size: calc(100% * (768 / 1200));
+}
+
+ul.submenu li a {
+    font-size: calc(100% * (768 / 1200));
+}
 }
 
 @media screen and (min-width: 576px) and (max-width: 767px) {
     .top-bar {
-  font-size: calc(100% * (576  / 1200));
- }
+    font-size: calc(100% * (576/ 1200));
+}
+
+.logo-container img {
+    font-size: calc(100% * (576 / 1200));
+}
+
+.cart-icon img {
+    font-size: calc(100% * (576 / 1200));
+}
+
+.logo-container h1,
+.menu ul li a,
+.cart-icon img {
+    font-size: calc(100% * (576 / 1200));
+}
+
+.menu ul {
+    font-size: calc(100% * (576 / 1200));
+}
+
+.menu ul li {
+    font-size: calc(100% * (576 / 1200));
+}
+
+nav.menu {
+   font-size: calc(100% * (576 / 1200));
+}
+
+nav.menu ul {
+    font-size: calc(100% * (576 / 1200));
+}
+
+nav.menu ul li a {
+    font-size: calc(100% * (576 / 1200));
+}
+
+ul.submenu {
+    font-size: calc(100% * (576 / 1200));
+}
+
+ul.submenu li a {
+    font-size: calc(100% * (576 / 1200));
+}
 }
 
 @media screen and (max-width: 575px) {
    .top-bar {
-  font-size: calc(100% * (575  / 1200));
- }
+    font-size: calc(100% * (575 / 1200));
+}
+
+.logo-container img {
+    font-size: calc(100% * (575 / 1200));
+}
+
+.cart-icon img {
+    font-size: calc(100% * (575 / 1200));
+}
+
+.logo-container h1,
+.menu ul li a,
+.cart-icon img {
+    font-size: calc(100% * (575 / 1200));
+}
+
+.menu ul {
+    font-size: calc(100% * (575 / 1200));
+}
+
+.menu ul li {
+    font-size: calc(100% * (575 / 1200));
+}
+
+nav.menu {
+   font-size: calc(100% * (575 / 1200));
+}
+
+nav.menu ul {
+    font-size: calc(100% * (575 / 1200));
+}
+
+nav.menu ul li a {
+    font-size: calc(100% * (575 / 1200));
+}
+
+ul.submenu {
+    font-size: calc(100% * (575 / 1200));
+}
+
+ul.submenu li a {
+    font-size: calc(100% * (575 / 1200));
+}
 }
