--- a/styles.css
+++ b/styles.css
@@ -415,193 +415,69 @@ footer {
     background: #333;
 }
 @media screen and (min-width: 992px) and (max-width: 1199px) {
-    .top-bar {
-    font-size: calc(100% * (992 / 1200));
-}
-
 .logo-container img {
-    font-size: calc(100% * (992 / 1200));
+    width: 100px;
+    height: auto;
 }
 
 .cart-icon img {
-    font-size: calc(100% * (992 / 1200));
+    width: 35px;
+    height: auto;
 }
 
 .logo-container h1,
 .menu ul li a,
 .cart-icon img {
-    font-size: calc(100% * (992 / 1200));
+    font-size: 0.8rem;
 }
-
-.menu ul {
-    font-size: calc(100% * (992 / 1200));
-}
-
-.menu ul li {
-    font-size: calc(100% * (992 / 1200));
-}
-
-nav.menu {
-   font-size: calc(100% * (992 / 1200));
-}
-
-nav.menu ul {
-    font-size: calc(100% * (992 / 1200));
-}
-
-nav.menu ul li a {
-    font-size: calc(100% * (992 / 1200));
-}
-
-ul.submenu {
-    font-size: calc(100% * (992 / 1200));
-}
-
-ul.submenu li a {
-    font-size: calc(100% * (992 / 1200));
-}
-}
-
 @media screen and (min-width: 768px) and (max-width: 991px) {
-    .top-bar {
-    font-size: calc(100% * (768 / 1200));
-}
-
-.logo-container img {
-    font-size: calc(100% * (768 / 1200));
+    .logo-container img {
+    width: 80px;
+    height: auto;
 }
 
 .cart-icon img {
-    font-size: calc(100% * (768 / 1200));
+    width: 30px;
+    height: auto;
 }
 
 .logo-container h1,
 .menu ul li a,
 .cart-icon img {
-    font-size: calc(100% * (768 / 1200));
-}
-
-.menu ul {
-    font-size: calc(100% * (768 / 1200));
-}
-
-.menu ul li {
-    font-size: calc(100% * (768 / 1200));
-}
-
-nav.menu {
-   font-size: calc(100% * (768 / 1200));
-}
-
-nav.menu ul {
-    font-size: calc(100% * (768 / 1200));
-}
-
-nav.menu ul li a {
-    font-size: calc(100% * (768 / 1200));
-}
-
-ul.submenu {
-    font-size: calc(100% * (768 / 1200));
-}
-
-ul.submenu li a {
-    font-size: calc(100% * (768 / 1200));
-}
+    font-size: 0.6rem;
 }
 
 @media screen and (min-width: 576px) and (max-width: 767px) {
-    .top-bar {
-    font-size: calc(100% * (576/ 1200));
-}
-
-.logo-container img {
-    font-size: calc(100% * (576 / 1200));
+    .logo-container img {
+    width: 60px;
+    height: auto;
 }
 
 .cart-icon img {
-    font-size: calc(100% * (576 / 1200));
+    width: 25px;
+    height: auto;
 }
 
 .logo-container h1,
 .menu ul li a,
 .cart-icon img {
-    font-size: calc(100% * (576 / 1200));
-}
-
-.menu ul {
-    font-size: calc(100% * (576 / 1200));
-}
-
-.menu ul li {
-    font-size: calc(100% * (576 / 1200));
-}
-
-nav.menu {
-   font-size: calc(100% * (576 / 1200));
-}
-
-nav.menu ul {
-    font-size: calc(100% * (576 / 1200));
-}
-
-nav.menu ul li a {
-    font-size: calc(100% * (576 / 1200));
-}
-
-ul.submenu {
-    font-size: calc(100% * (576 / 1200));
-}
-
-ul.submenu li a {
-    font-size: calc(100% * (576 / 1200));
-}
+    font-size: 0.5rem;
 }
 
 @media screen and (max-width: 575px) {
-   .top-bar {
-    font-size: calc(100% * (575 / 1200));
-}
-
+   
 .logo-container img {
-    font-size: calc(100% * (575 / 1200));
+    width: 55px;
+    height: auto;
 }
 
 .cart-icon img {
-    font-size: calc(100% * (575 / 1200));
+    width: 20px;
+    height: auto;
 }
 
 .logo-container h1,
 .menu ul li a,
 .cart-icon img {
-    font-size: calc(100% * (575 / 1200));
-}
-
-.menu ul {
-    font-size: calc(100% * (575 / 1200));
-}
-
-.menu ul li {
-    font-size: calc(100% * (575 / 1200));
-}
-
-nav.menu {
-   font-size: calc(100% * (575 / 1200));
-}
-
-nav.menu ul {
-    font-size: calc(100% * (575 / 1200));
-}
-
-nav.menu ul li a {
-    font-size: calc(100% * (575 / 1200));
-}
-
-ul.submenu {
-    font-size: calc(100% * (575 / 1200));
-}
-
-ul.submenu li a {
-    font-size: calc(100% * (575 / 1200));
-}
+    font-size: 0.45rem;
 }
